@@ -1,3 +1,8 @@
+2014-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* debug.c, hash.c, knj.c, tex-make.c: [WIN64] Avoid cast from
+	pointer to integer of different size.
+
 2014-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* mingw32.h: Require WINVER >= 0x0500.
